--- a/deno.json
+++ b/deno.json
@@ -6,13 +6,17 @@
     "serve": "deno run --allow-net --allow-read jsr:@std/http@1/file-server dist/"
   },
   "compilerOptions": {
-    "lib": ["ES2020", "DOM", "DOM.Iterable"]
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ]
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
-    "@types/three": "npm:@types/three@^0.177.0",
+    "@types/three": "npm:@types/three@^0.182.0",
     "iwer": "npm:iwer@^2.0.1",
-    "three": "npm:three@^0.177.0",
+    "three": "npm:three@^0.182.0",
     "vite": "npm:vite@^6.1.1"
   }
 }
